Fixes #24017 - Add scrollbar in org/log dropdown (#5722) (#5808)

--- a/app/assets/stylesheets/patternfly_and_overrides.scss
+++ b/app/assets/stylesheets/patternfly_and_overrides.scss
@@ -321,8 +321,8 @@ a.btn-info span {
   }
 }
 
-.dropdown-submenu > .dropdown-menu {
-  max-height: 80vh;
+.org-switcher > .dropdown-menu {
+  max-height: 24vh;
   overflow-y: auto;
 }
 // Color origin: pf-orange-400
